# re2dfa

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  RegexCheckerCore_Windows.lib  cmake_install.cmake  main.cpp  quick_setup.sh  re2dfa  re2dfa.in  re2dfa.out  task.cpp
